[gd_scene load_steps=8 format=2]

[ext_resource path="res://content/hud/wavemeter/bar0.png" type="Texture" id=1]
[ext_resource path="res://content/hud/wavemeter/MonsterSpawn.gd" type="Script" id=2]
[ext_resource path="res://content/hud/wavemeter/hostile_flare.png" type="Texture" id=3]
[ext_resource path="res://content/hud/wavemeter/hostile.png" type="Texture" id=4]
[ext_resource path="res://gui/fonts/FontHudPixelartMonospaced.tres" type="DynamicFont" id=5]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=6]
[ext_resource path="res://content/sounds/UI/safe_temp.wav" type="AudioStream" id=7]

[node name="WaveMeter" type="Control" groups=["pauseL"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
size = Vector2( 2, 2 )
layoutWeights = Vector2( 0, 1 )

[node name="WaveLabel" type="Label" parent="."]
margin_left = 1.0
margin_top = -2.0
margin_right = 31.0
margin_bottom = 30.0
grow_horizontal = 0
rect_scale = Vector2( 0.333, 0.333 )
size_flags_horizontal = 8
custom_colors/font_color = Color( 1, 0.92549, 0.839216, 1 )
custom_fonts/font = ExtResource( 5 )
text = "99"
align = 2

[node name="BarBackground" type="TextureRect" parent="."]
margin_left = 12.0
margin_top = 3.0
margin_right = 39.0
margin_bottom = 11.0
texture = ExtResource( 1 )

[node name="MonsterSpawnRect" type="ColorRect" parent="BarBackground"]
margin_left = 1.0
margin_top = 1.0
margin_right = 25.0
margin_bottom = 4.0
color = Color( 0.376471, 0.298039, 0.862745, 1 )

[node name="WaveDelayRect" type="ColorRect" parent="BarBackground"]
margin_left = 1.0
margin_top = 5.0
margin_right = 23.0
margin_bottom = 7.0
color = Color( 0.376471, 0.298039, 0.862745, 1 )

[node name="Normal" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = 2.0
margin_right = 11.0
margin_bottom = 10.0
texture = ExtResource( 4 )

[node name="Flare" type="TextureRect" parent="."]
visible = false
margin_left = 1.0
margin_top = 2.0
margin_right = 11.0
margin_bottom = 10.0
texture = ExtResource( 3 )

[node name="MonsterSpawnTween" type="Tween" parent="."]

[node name="WaveEndSound" parent="." instance=ExtResource( 6 )]
stream = ExtResource( 7 )
volume_db = 3.0
bus = "UI"
randomVolume = 0.0
randomPitch = 0.0
